# DirectIP

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release-dump.yml  release.yml
crates/storage/: Cargo.toml
crates/storage/src/: filesystem.rs  inmemory.rs  lib.rs  sqlite.rs
directip-arrow/: Cargo.toml
directip-arrow/src/: lib.rs
directip-client/: Cargo.toml  README.md
directip-client/src/: main.rs
directip-client/tests/: client_cmd.rs
directip-command/: Cargo.toml
directip-command/src/: main.rs
directip-dump/: Cargo.toml  README.md
directip-dump/src/: main.rs
directip-dump/tests/: dump_cmd.rs
directip-dump/tests/data/: mt_confirmation.isbd
directip-storage/: Cargo.toml
directip-storage/src/: lib.rs
src/: error.rs  lib.rs
src/mo/: header.rs  location.rs  mod.rs  payload.rs
src/mt/: confirmation.rs  header.rs  mod.rs  payload.rs
