[package]
name = "directip"
version = "0.2.1"
authors = ["Guilherme Castelão <guilherme@castelao.net>", "Luiz Irber <luiz.irber@gmail.com>"]
edition = "2021"
description = "Iridium SBD Direct-IP communication protocol"
documentation = "https://docs.rs/directip"
license = "MIT OR Apache-2.0"
repository = "https://github.com/castelao/DirectIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["directip-client"]
default-members = [".", "directip-client"]

[dependencies]
byteorder = "1"
chrono = "0.4.23"
log = "0.4"
thiserror = "1.0"
derive_builder = "0.11.2"

[lib]
name = "directip"
