[package]
name = "directip-client"
version = "0.1.2"
authors = ["Guilherme Castelão <guilherme@castelao.net>", "Luiz Irber <luiz.irber@gmail.com>"]
edition = "2021"
description = "Iridium SBD Direct-IP communication client"
documentation = "https://docs.rs/directip-client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/castelao/DirectIP/tree/main/directip-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.5", features=["cargo"] }
directip = { version = "0.1.4", path = "../" }
log = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
