[package]
name = "directip-storage"
version = "0.0.1"
authors.workspace = true
authors.license = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
directip.workspace = true
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
sqlite = ["dep:sqlx"]
